--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="vewport" content="width=device-width,initial-scale=1">
   <title>Interface d'administration - Résumé des réponses</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
