--- a/frontend/index.html
+++ b/frontend/index.html
@@ -266,7 +266,7 @@
       };
 
       try {
-        const res = await fetch('http://localhost:3000/api/response', {
+        const res = await fetch('https://faf-jotg.onrender.com/api/response', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
