Add express-validator for POST /api/response and honeypot

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,7 @@
 <body>
   <h1>Formulaire Mensuel... dis-moi tout</h1>
   <form id="friendForm">
+    <input type="text" name="website" style="display:none" tabindex="-1" autocomplete="off">
     <!-- Champ Nom -->
     <div class="form-group">
       <label for="name">Ton nom :</label>
