--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -88,7 +88,15 @@
           Object.entries(freq).forEach(([ans, cnt]) => {
             labels.push(`${ans} (${userMap[ans].join(', ')})`);
             data.push(cnt);
-            bg.push(`hsla(${Math.random()*360},50%,50%,0.8)`);
+
+             // guide des couleurs
+          let color = "rgba(254, 153, 0, 1)";
+          if (ans === "WE'RE BARACK")         color = "rgba(13, 150, 24, 1)";
+          else if (ans === "ITS JOEVER")      color = "rgba(220, 55, 17, 1)";
+          else if (ans === "ça va")           color = "rgba(50, 101, 204, 1)";
+          else if (ans.startsWith("a connu meilleur mois")) 
+                                              color = "rgba(254, 153, 0, 1)";
+          bg.push(color);
           });
 
           const wrapper = document.createElement('div');
