je pense sincèrement que c'est vraiment la dernière cette fois-ci

--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -136,7 +136,7 @@
               typeof answer === 'string' &&
               (
                 answer.startsWith('data:image') ||
-                /\.(jpe?g|png|gif|webp)(?:\?.*)?$/i.test(answer)
+                /\.(jpe?g|png|gif|webp|heic)(?:\?.*)?$/i.test(answer)
               )
             );
 
